Ensure Races navbar menu doesn't cause horizontal overflow on mobile

--- a/ChallengeDashboard/wwwroot/app.css
+++ b/ChallengeDashboard/wwwroot/app.css
@@ -163,4 +163,8 @@ table.leaderboard td.value {
         position: revert;
         transform: revert;
     }
+    
+    #races {
+        right: 0.25rem;
+    }
 }
